codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__projectless_windows_sandbox_setup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Set up the Zuno agent sandbox to protect your files and control network access. Learn more
  <https://developers.openai.com/codex/windows>


› 1. Set up default sandbox (requires Administrator permissions)
  2. Use non-admin sandbox (higher risk if prompt injected)
  3. Quit

  enter select · esc back
